--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-langchain
-langchain-community
-uvicorn
-fastapi
-pandas
-numpy
-langchain-google-genai
+fastapi==0.111.1
+uvicorn==0.22.0
+pydantic==2.12.1
+pandas==2.1.1
+numpy==1.26.1
+bson==0.5.10
+python-dotenv==1.1.1
+Jinja2==3.1.2
+starlette==0.29.1
+langchain==0.3.27
+langchain-core==0.3.79
+langchain-community==0.3.31
+langchain-text-splitters==0.3.11
+langchain-google-genai==0.4.1
+sqlalchemy==2.0.44
+faiss-cpu==1.7.4
