--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
+
 fastapi
 uvicorn
-pydantic
-pandas
-numpy
-python-dotenv
-Jinja2
-starlette
+
+
+pymongo>=4.6
+dnspython  # required for mongodb+srv:// URLs
+
+
 langchain
 langchain-core
 langchain-community
-langchain-text-splitters
 langchain-google-genai
-sqlalchemy
-faiss-cpu
-pymongo
+google-generativeai
 sentence-transformers
+faiss-cpu
+pandas
+numpy
+joblib
